feat: desktop version init