@@ -4,13 +4,20 @@ import org.gradle.api.file.DirectoryProperty
 import org.gradle.api.file.RegularFileProperty
 import org.gradle.api.provider.Property
 import org.gradle.api.tasks.Input
+import org.gradle.api.tasks.InputDirectory
 import org.gradle.api.tasks.InputFile
 import org.gradle.api.tasks.Optional
 import org.gradle.api.tasks.OutputDirectory
+import org.gradle.api.tasks.OutputFile
+import org.gradle.api.tasks.Sync
 import org.gradle.api.tasks.TaskAction
+import org.gradle.jvm.tasks.Jar
+import org.gradle.process.ExecOperations
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompilationTask
+import java.io.File
 import java.util.Properties
+import javax.inject.Inject
 
 abstract class GenerateRuntimeConfigsTask : DefaultTask() {
     @get:OutputDirectory
@@ -25,6 +32,12 @@ abstract class GenerateRuntimeConfigsTask : DefaultTask() {
 
     @get:Input
     abstract val appVersionCode: Property<Int>
+
+    @get:Input
+    abstract val desktopAppVersionName: Property<String>
+
+    @get:Input
+    abstract val desktopAppVersionCode: Property<Int>
 
     @TaskAction
     fun generate() {
@@ -112,6 +125,8 @@ abstract class GenerateRuntimeConfigsTask : DefaultTask() {
                 |object AppVersionConfig {
                 |    const val VERSION_NAME = "${appVersionName.get()}"
                 |    const val VERSION_CODE = ${appVersionCode.get()}
+                |    const val DESKTOP_VERSION_NAME = "${desktopAppVersionName.get()}"
+                |    const val DESKTOP_VERSION_CODE = ${desktopAppVersionCode.get()}
                 |}
                 """.trimMargin()
             )
@@ -146,6 +161,125 @@ fun readXcconfigValue(file: File, key: String): String? {
         }
         .firstOrNull { (entryKey, _) -> entryKey == key }
         ?.second
+}
+
+abstract class NotarizeMacosDmgWithKeychainTask @Inject constructor(
+    private val execOperations: ExecOperations,
+) : DefaultTask() {
+    @get:InputDirectory
+    abstract val dmgDir: DirectoryProperty
+
+    @get:OutputDirectory
+    abstract val artifactDir: DirectoryProperty
+
+    @get:Input
+    abstract val finalDmgName: Property<String>
+
+    @get:Input
+    abstract val defaultDmgName: Property<String>
+
+    @get:Input
+    abstract val keychainProfile: Property<String>
+
+    init {
+        outputs.upToDateWhen { false }
+    }
+
+    @TaskAction
+    fun notarize() {
+        val profile = keychainProfile.get().trim()
+        require(profile.isNotEmpty()) {
+            "Set NUVIO_MACOS_NOTARY_PASSWORD=@keychain:<profile> or NUVIO_MACOS_NOTARY_KEYCHAIN_PROFILE=<profile>."
+        }
+
+        val dmg = ensureFinalDmg()
+        execOperations.exec {
+            commandLine(
+                "xcrun",
+                "notarytool",
+                "submit",
+                dmg.absolutePath,
+                "--wait",
+                "--keychain-profile",
+                profile,
+            )
+        }
+        execOperations.exec {
+            commandLine("xcrun", "stapler", "staple", dmg.absolutePath)
+        }
+        publishDmg(dmg)
+        logger.lifecycle("Notarized and stapled macOS DMG: ${dmg.absolutePath}")
+    }
+
+    private fun ensureFinalDmg(): File {
+        val outputDir = dmgDir.get().asFile
+        val finalDmg = outputDir.resolve(finalDmgName.get())
+        val defaultDmg = outputDir.resolve(defaultDmgName.get())
+        val sourceDmg = defaultDmg.takeIf { it.exists() }
+            ?: finalDmg.takeIf { it.exists() }
+            ?: error("Expected macOS DMG output in ${outputDir.absolutePath}")
+
+        if (sourceDmg != finalDmg) {
+            if (finalDmg.exists() && !finalDmg.delete()) {
+                error("Could not replace existing DMG: ${finalDmg.absolutePath}")
+            }
+            if (!sourceDmg.renameTo(finalDmg)) {
+                sourceDmg.copyTo(finalDmg, overwrite = true)
+                if (!sourceDmg.delete()) {
+                    logger.warn("Could not delete old DMG after copy: ${sourceDmg.absolutePath}")
+                }
+            }
+        }
+
+        logger.lifecycle("macOS DMG artifact: ${finalDmg.absolutePath}")
+        return finalDmg
+    }
+
+    private fun publishDmg(dmg: File) {
+        val publishedDir = artifactDir.get().asFile
+        publishedDir.mkdirs()
+        val publishedDmg = publishedDir.resolve(dmg.name)
+        if (dmg.canonicalFile != publishedDmg.canonicalFile) {
+            dmg.copyTo(publishedDmg, overwrite = true)
+        }
+        logger.lifecycle("Published macOS DMG artifact: ${publishedDmg.absolutePath}")
+    }
+}
+
+fun shellQuote(value: String): String = "'${value.replace("'", "'\"'\"'")}'"
+
+fun cmdQuote(value: String): String = "\"${value.replace("\"", "\"\"")}\""
+
+fun psSingleQuote(value: String): String = "'${value.replace("'", "''")}'"
+
+fun semanticVersionSortKey(value: String): String =
+    value.split('.', '-', '_')
+        .joinToString(".") { part ->
+            part.toIntOrNull()?.toString()?.padStart(8, '0') ?: part
+        }
+
+fun newestDirectory(root: File): File? =
+    root.takeIf(File::exists)
+        ?.listFiles(File::isDirectory)
+        ?.maxByOrNull { semanticVersionSortKey(it.name) }
+
+fun jpackageCompatibleVersion(version: String): String {
+    val versionCore = version.substringBefore('-').substringBefore('+').trim()
+    val parts = versionCore.split('.').filter { it.isNotBlank() }
+    require(parts.isNotEmpty() && parts.size <= 3) {
+        "Desktop package version must use one to three numeric components: $version"
+    }
+    val numbers = parts.map { part ->
+        part.toIntOrNull() ?: error("Desktop package version component is not numeric: $version")
+    }.toMutableList()
+    require(numbers.all { it >= 0 }) {
+        "Desktop package version components must not be negative: $version"
+    }
+    while (numbers.size < 3) {
+        numbers += 0
+    }
+    numbers[0] = numbers[0].coerceAtLeast(1)
+    return numbers.joinToString(".")
 }
 
 plugins {
@@ -187,6 +321,7 @@ val iosDistributionSourceDir = if (iosDistribution == "full") {
 }
 val iosFrameworkBundleId = "com.nuvio.media"
 val fullCommonSourceDir = project.file("src/fullCommonMain/kotlin")
+val fullPluginSourceDir = fullCommonSourceDir.resolve("com/nuvio/app/features/plugins")
 val generatedRuntimeConfigDir = layout.buildDirectory.dir("generated/runtime-config/kotlin")
 val requestedGradleTasks = gradle.startParameter.taskNames.map { taskName ->
     taskName.substringAfterLast(':').lowercase()
@@ -200,11 +335,446 @@ val isAndroidAppBundleBuild = requestedGradleTasks.any { taskName ->
         taskName.endsWith("bundle")
 }
 
+fun localOrEnvProperty(name: String): String? =
+    (
+        providers.gradleProperty(name).orNull
+            ?: System.getenv(name)
+            ?: supabaseProps.getProperty(name)
+        )
+        ?.trim()
+        ?.takeIf { it.isNotBlank() }
+
+val macosSigningIdentity = localOrEnvProperty("NUVIO_MACOS_SIGNING_IDENTITY")
+val macosNotaryAppleId = localOrEnvProperty("NUVIO_MACOS_NOTARY_APPLE_ID")
+val macosNotaryTeamId = localOrEnvProperty("NUVIO_MACOS_NOTARY_TEAM_ID")
+val macosNotaryPassword = localOrEnvProperty("NUVIO_MACOS_NOTARY_PASSWORD")
+val macosNotaryKeychainProfile = localOrEnvProperty("NUVIO_MACOS_NOTARY_KEYCHAIN_PROFILE")
+    ?: macosNotaryPassword
+        ?.takeIf { it.startsWith("@keychain:", ignoreCase = true) }
+        ?.substringAfter(':')
+        ?.trim()
+        ?.takeIf { it.isNotBlank() }
+val macosNotaryAppSpecificPassword = macosNotaryPassword
+    ?.takeUnless { it.startsWith("@keychain:", ignoreCase = true) }
+
+val desktopReleaseVersionName = (
+    providers.gradleProperty("nuvio.desktop.versionName").orNull
+        ?: System.getenv("NUVIO_DESKTOP_VERSION_NAME")
+        ?: supabaseProps.getProperty("NUVIO_DESKTOP_VERSION_NAME")
+        ?: releaseAppVersionName
+    ).trim()
+require(desktopReleaseVersionName.isNotBlank()) {
+    "Desktop version name must not be blank."
+}
+val desktopReleaseVersionCode = (
+    providers.gradleProperty("nuvio.desktop.versionCode").orNull
+        ?: System.getenv("NUVIO_DESKTOP_VERSION_CODE")
+        ?: supabaseProps.getProperty("NUVIO_DESKTOP_VERSION_CODE")
+        ?: releaseAppVersionCode.toString()
+    )?.trim()
+    ?.takeIf { it.isNotBlank() }
+    ?.toIntOrNull()
+    ?: 1
+val desktopReleasePackageVersion = jpackageCompatibleVersion(desktopReleaseVersionName)
+
+val isMacHost = System.getProperty("os.name").contains("mac", ignoreCase = true)
+val isWindowsHost = System.getProperty("os.name").contains("win", ignoreCase = true)
+val mpvKitDir = providers.gradleProperty("nuvio.mpvkit.dir")
+    .orElse(rootProject.layout.projectDirectory.dir("MPVKit").asFile.absolutePath)
+val macosPlayerBridgeSource = layout.projectDirectory.file("src/desktopMain/native/macos/player_bridge.mm")
+fun normalizedMacosArch(value: String): String =
+    when (value.lowercase()) {
+        "aarch64", "arm64" -> "arm64"
+        "amd64", "x64", "x86_64" -> "x86_64"
+        else -> error("Unsupported macOS architecture '$value'. Use arm64 or x86_64.")
+    }
+val macosHostJvmArch = normalizedMacosArch(System.getProperty("os.arch"))
+val requestedMacosArch = providers.gradleProperty("nuvio.macos.arch").orNull
+    ?: System.getenv("NUVIO_MACOS_ARCH")
+val macosPlayerBridgeArch = requestedMacosArch?.let(::normalizedMacosArch) ?: macosHostJvmArch
+val isMacosDmgBuildRequested = requestedGradleTasks.any { taskName ->
+    taskName == "packagedmg" ||
+        taskName == "packagereleasedmg" ||
+        taskName == "notarizedmg" ||
+        taskName == "notarizereleasedmg" ||
+        taskName == "notarizereleasedmgwithkeychain"
+}
+if (isMacHost && isMacosDmgBuildRequested && macosPlayerBridgeArch != macosHostJvmArch) {
+    error(
+        "macOS DMG architecture '$macosPlayerBridgeArch' must match the Gradle JVM architecture '$macosHostJvmArch'. " +
+            "Run Gradle with a $macosPlayerBridgeArch JDK/Rosetta, then pass -Pnuvio.macos.arch=$macosPlayerBridgeArch."
+    )
+}
+val macosPlayerBridgeOutput = layout.buildDirectory.file("native/macos/$macosPlayerBridgeArch/libplayer_bridge.dylib")
+val macosDmgArchName = macosPlayerBridgeArch
+val isMacosDmgNotarizationRequested = requestedGradleTasks.any { taskName ->
+    taskName == "notarizedmg" || taskName == "notarizereleasedmg"
+}
+val mpvKitRoot = File(mpvKitDir.get())
+val mpvKitDistRoot = File(mpvKitRoot, "dist")
+val mpvKitLibmpvRoot = File(mpvKitDistRoot, "libmpv/macos/thin/$macosPlayerBridgeArch")
+val mpvKitLibmpvPkgConfigFile = File(mpvKitLibmpvRoot, "lib/pkgconfig/mpv.pc")
+val mpvKitGeneratedPkgConfigDirs = if (mpvKitDistRoot.exists()) {
+    mpvKitDistRoot.walkTopDown()
+        .filter { it.isDirectory && it.invariantSeparatorsPath.endsWith("/macos/thin/$macosPlayerBridgeArch/lib/pkgconfig") }
+        .toList()
+        .sortedBy { it.absolutePath }
+} else {
+    emptyList()
+}
+val mpvKitGeneratedLibSearchArgs = mpvKitGeneratedPkgConfigDirs
+    .mapNotNull { it.parentFile }
+    .distinctBy { it.absolutePath }
+    .joinToString(" ") { "-L${shellQuote(it.absolutePath)}" }
+val missingMpvKitMacosFrameworks = if (mpvKitLibmpvPkgConfigFile.exists()) emptyList() else listOf("mpv.pc")
+val missingMpvKitMacosMessage = """
+    MPVKit macOS libmpv artifacts are missing for $macosPlayerBridgeArch: ${missingMpvKitMacosFrameworks.joinToString()}.
+    Build MPVKit's macOS runtime first:
+      cd ${mpvKitRoot.absolutePath}
+      make build platform=macos
+    Or pass -Pnuvio.mpvkit.dir=/absolute/path/to/MPVKit.
+""".trimIndent()
+val missingMpvKitMacosShellMessage = missingMpvKitMacosMessage.replace("'", "'\"'\"'")
+val macosPlayerBridgeSourceFile = macosPlayerBridgeSource.asFile
+val macosPlayerBridgeOutputFile = macosPlayerBridgeOutput.get().asFile
+val macosPlayerBridgeJavaHome = providers.systemProperty("java.home").get()
+val mpvKitLibmpvStaticLib = File(mpvKitLibmpvRoot, "lib/libmpv.a")
+if (isMacHost) {
+    macosPlayerBridgeOutputFile.parentFile.mkdirs()
+}
+val macosPlayerBridgeCommand = if (missingMpvKitMacosFrameworks.isNotEmpty()) {
+    listOf(
+        "/bin/sh",
+        "-c",
+        "printf '%s\\n' '$missingMpvKitMacosShellMessage' >&2; exit 1",
+    )
+} else {
+    mutableListOf(
+        "/bin/sh",
+        "-c",
+        """
+        set -eu
+        SDKROOT="${'$'}(xcrun --sdk macosx --show-sdk-path)"
+        SWIFTC="${'$'}(xcrun --toolchain XcodeDefault --find swiftc)"
+        SWIFT_TOOLCHAIN="${'$'}{SWIFTC%/usr/bin/swiftc}"
+        SWIFT_LIB="${'$'}{SWIFT_TOOLCHAIN}/usr/lib/swift/macosx"
+        DEFAULT_PC="${'$'}(pkg-config --variable pc_path pkg-config)"
+        export PKG_CONFIG_LIBDIR=${shellQuote(mpvKitGeneratedPkgConfigDirs.joinToString(":"))}:"${'$'}{DEFAULT_PC}"
+        exec xcrun clang++ \
+          -std=c++17 \
+          -dynamiclib \
+          -fobjc-arc \
+          -ObjC++ \
+          -arch ${shellQuote(macosPlayerBridgeArch)} \
+          -isysroot "${'$'}{SDKROOT}" \
+          -mmacosx-version-min=11.0 \
+          ${shellQuote(macosPlayerBridgeSourceFile.absolutePath)} \
+          -o ${shellQuote(macosPlayerBridgeOutputFile.absolutePath)} \
+          -I${shellQuote("$macosPlayerBridgeJavaHome/include")} \
+          -I${shellQuote("$macosPlayerBridgeJavaHome/include/darwin")} \
+          -I${shellQuote(File(mpvKitLibmpvRoot, "include").absolutePath)} \
+          $mpvKitGeneratedLibSearchArgs \
+          -L"${'$'}{SWIFT_LIB}" \
+          -L/usr/lib/swift \
+          -framework AppKit \
+          -framework WebKit \
+          -framework Metal \
+          -framework Security \
+          -lswiftCompatibility56 \
+          -lswiftCompatibilityConcurrency \
+          -lswiftCompatibilityPacks \
+          -lc++ \
+          ${'$'}(pkg-config --libs --static mpv)
+        """.trimIndent(),
+    )
+}
+val buildMacosPlayerBridge = tasks.register<Exec>("buildMacosPlayerBridge") {
+    notCompatibleWithConfigurationCache("Builds a host-local player bridge against MPVKit's macOS libmpv artifacts.")
+    enabled = isMacHost
+    inputs.file(macosPlayerBridgeSource)
+    if (mpvKitLibmpvStaticLib.exists()) {
+        inputs.file(mpvKitLibmpvStaticLib)
+    }
+    if (mpvKitLibmpvPkgConfigFile.exists()) {
+        inputs.file(mpvKitLibmpvPkgConfigFile)
+    }
+    inputs.files(mpvKitGeneratedPkgConfigDirs.mapNotNull { it.parentFile?.resolve("lib")?.takeIf(File::exists) })
+    outputs.file(macosPlayerBridgeOutput)
+    commandLine(macosPlayerBridgeCommand)
+}
+
+val windowsPlayerBridgeArch = when (System.getProperty("os.arch").lowercase()) {
+    "aarch64", "arm64" -> "arm64"
+    "x86" -> "x86"
+    else -> "x64"
+}
+val windowsPlayerBridgeSource = layout.projectDirectory.file("src/desktopMain/native/windows/player_bridge.cpp")
+val windowsPlayerBridgeOutput = layout.buildDirectory.file("native/windows/player_bridge.dll")
+val windowsPlayerBridgeImportLib = layout.buildDirectory.file("native/windows/player_bridge.lib")
+val windowsPlayerBridgePdb = layout.buildDirectory.file("native/windows/player_bridge.pdb")
+val windowsPlayerBridgeObj = layout.buildDirectory.file("native/windows/player_bridge.obj")
+val windowsPlayerBridgeScript = layout.buildDirectory.file("native/windows/build-player-bridge.bat")
+val windowsPlayerRuntimeOutput = layout.buildDirectory.dir("native/windows-runtime")
+if (isWindowsHost) {
+    windowsPlayerBridgeOutput.get().asFile.parentFile.mkdirs()
+}
+val windowsWebView2Root = providers.gradleProperty("nuvio.webview2.dir").orNull
+    ?.takeIf { it.isNotBlank() }
+    ?.let(::File)
+    ?: newestDirectory(File(System.getProperty("user.home"), ".nuget/packages/microsoft.web.webview2"))
+    ?: File("__missing_webview2__")
+val windowsWebView2IncludeDir = File(windowsWebView2Root, "build/native/include")
+val windowsWebView2NativeDir = File(windowsWebView2Root, "build/native/$windowsPlayerBridgeArch")
+val windowsWebView2LoaderLib = File(windowsWebView2NativeDir, "WebView2Loader.dll.lib")
+val windowsWebView2LoaderDll = File(windowsWebView2NativeDir, "WebView2Loader.dll")
+val bundledWindowsLibmpvRuntimeDir = layout.projectDirectory.dir("src/desktopMain/native/windows/runtime").asFile
+val windowsLibmpvRuntimeDirOverride = providers.gradleProperty("nuvio.windows.libmpv.runtimeDir").orNull
+    ?.takeIf { it.isNotBlank() }
+    ?.let(::File)
+val windowsLibmpvRuntimeDir = windowsLibmpvRuntimeDirOverride
+    ?: bundledWindowsLibmpvRuntimeDir.takeIf { File(it, "libmpv-2.dll").exists() }
+val windowsLibmpvDllOverride = providers.gradleProperty("nuvio.windows.libmpv.dll").orNull
+    ?.takeIf { it.isNotBlank() }
+    ?.let(::File)
+val windowsLibmpvDll = windowsLibmpvDllOverride
+    ?: windowsLibmpvRuntimeDir?.resolve("libmpv-2.dll")
+    ?: listOf(
+        File("C:/msys64/ucrt64/bin/libmpv-2.dll"),
+        File("C:/msys64/mingw64/bin/libmpv-2.dll"),
+    ).firstOrNull(File::exists)
+val windowsCppRuntimeDllNames = listOf(
+    "vcruntime140.dll",
+    "vcruntime140_1.dll",
+    "msvcp140.dll",
+    "msvcp140_1.dll",
+    "msvcp140_2.dll",
+    "msvcp140_atomic_wait.dll",
+    "msvcp140_codecvt_ids.dll",
+    "concrt140.dll",
+)
+val windowsCppRuntimeDlls = if (isWindowsHost) {
+    windowsCppRuntimeDllNames
+        .map { File("C:/Windows/System32", it) }
+        .filter(File::exists)
+} else {
+    emptyList()
+}
+val windowsVsWhere = File("C:/Program Files (x86)/Microsoft Visual Studio/Installer/vswhere.exe")
+val windowsVcvarsRelativePath = when (windowsPlayerBridgeArch) {
+    "x86" -> "VC\\Auxiliary\\Build\\vcvars32.bat"
+    "arm64" -> "VC\\Auxiliary\\Build\\vcvarsarm64.bat"
+    else -> "VC\\Auxiliary\\Build\\vcvars64.bat"
+}
+val windowsVcvarsPath = providers.gradleProperty("nuvio.windows.vcvars.path").orNull
+    ?.takeIf { it.isNotBlank() }
+val windowsPlayerBridgeJavaHome = providers.systemProperty("java.home").get()
+val missingWindowsPlayerBridgeInputs = listOfNotNull(
+    "WebView2.h".takeUnless { windowsWebView2IncludeDir.resolve("WebView2.h").exists() },
+    "WebView2Loader.dll.lib".takeUnless { windowsWebView2LoaderLib.exists() },
+)
+val missingWindowsPlayerBridgeMessage = """
+    Windows desktop player bridge inputs are missing: ${missingWindowsPlayerBridgeInputs.joinToString()}.
+    Install the Microsoft.Web.WebView2 NuGet package or pass -Pnuvio.webview2.dir=C:/path/to/microsoft.web.webview2/version.
+    libmpv is loaded at runtime; pass -Pnuvio.windows.libmpv.runtimeDir=C:/path/to/mpv-dlls to bundle it.
+""".trimIndent()
+val windowsPlayerBridgeCommand = if (missingWindowsPlayerBridgeInputs.isNotEmpty()) {
+    listOf(
+        "cmd",
+        "/c",
+        "echo ${missingWindowsPlayerBridgeMessage.replace("\n", " ")} 1>&2 && exit /b 1",
+    )
+} else {
+    val sourceFile = windowsPlayerBridgeSource.asFile
+    val outputFile = windowsPlayerBridgeOutput.get().asFile
+    val importLibFile = windowsPlayerBridgeImportLib.get().asFile
+    val pdbFile = windowsPlayerBridgePdb.get().asFile
+    val objFile = windowsPlayerBridgeObj.get().asFile
+    val javaIncludeDir = File(windowsPlayerBridgeJavaHome, "include")
+    val javaWin32IncludeDir = File(javaIncludeDir, "win32")
+    val compileCommand = listOf(
+        "cl",
+        "/nologo",
+        "/EHsc",
+        "/std:c++17",
+        "/LD",
+        "/DUNICODE",
+        "/D_UNICODE",
+        "/DNOMINMAX",
+        "/DWIN32_LEAN_AND_MEAN",
+        "/permissive-",
+        cmdQuote(sourceFile.absolutePath),
+        "/I${cmdQuote(javaIncludeDir.absolutePath)}",
+        "/I${cmdQuote(javaWin32IncludeDir.absolutePath)}",
+        "/I${cmdQuote(windowsWebView2IncludeDir.absolutePath)}",
+        "/Fo${cmdQuote(objFile.absolutePath)}",
+        "/Fd${cmdQuote(pdbFile.absolutePath)}",
+        "/Fe${cmdQuote(outputFile.absolutePath)}",
+        "/link",
+        "/NOLOGO",
+        "/INCREMENTAL:NO",
+        "/IMPLIB:${cmdQuote(importLibFile.absolutePath)}",
+        cmdQuote(windowsWebView2LoaderLib.absolutePath),
+        "Ole32.lib",
+        "User32.lib",
+        "Gdi32.lib",
+        "Dwmapi.lib",
+    ).joinToString(" ")
+    val powershellCompileCommand = compileCommand.replace("\"", "__DQ__")
+    val powershellCommand = """
+        ${'$'}ErrorActionPreference = 'Stop'
+        ${'$'}dq = [char]34
+        ${'$'}vcvars = ${psSingleQuote(windowsVcvarsPath.orEmpty())}
+        if ([string]::IsNullOrWhiteSpace(${'$'}vcvars)) {
+          ${'$'}vswhere = ${psSingleQuote(windowsVsWhere.absolutePath)}
+          if (Test-Path ${'$'}vswhere) {
+            ${'$'}vcvars = & ${'$'}vswhere -latest -products '*' -requires Microsoft.VisualStudio.Component.VC.Tools.x86.x64 -find ${psSingleQuote(windowsVcvarsRelativePath)} | Select-Object -First 1
+          }
+        }
+        if ([string]::IsNullOrWhiteSpace(${'$'}vcvars) -or -not (Test-Path ${'$'}vcvars)) {
+          Write-Error 'Visual Studio C++ toolchain was not found. Install MSVC or pass -Pnuvio.windows.vcvars.path=C:\path\to\vcvars64.bat.'
+          exit 1
+        }
+        ${'$'}vcvars = ([string]${'$'}vcvars).Trim()
+        ${'$'}bat = ${psSingleQuote(windowsPlayerBridgeScript.get().asFile.absolutePath)}
+        ${'$'}compile = ${psSingleQuote(powershellCompileCommand)}.Replace('__DQ__', ${'$'}dq)
+        ${'$'}lines = @(
+          '@echo off',
+          ('set {0}VCVARS={1}{0}' -f ${'$'}dq, ${'$'}vcvars),
+          ('call {0}%VCVARS%{0} >nul' -f ${'$'}dq),
+          'if errorlevel 1 exit /b %errorlevel%',
+          ${'$'}compile,
+          'exit /b %ERRORLEVEL%'
+        )
+        Set-Content ${'$'}bat -Value ${'$'}lines -Encoding ASCII
+        & cmd.exe /d /c ${'$'}bat
+        ${'$'}code = ${'$'}LASTEXITCODE
+        if (${'$'}code -ne 0) { exit ${'$'}code }
+    """.trimIndent()
+    listOf(
+        "powershell",
+        "-NoProfile",
+        "-ExecutionPolicy",
+        "Bypass",
+        "-Command",
+        powershellCommand,
+    )
+}
+val buildWindowsPlayerBridge = tasks.register<Exec>("buildWindowsPlayerBridge") {
+    notCompatibleWithConfigurationCache("Builds a host-local player bridge against WebView2 and libmpv for Windows.")
+    enabled = isWindowsHost
+    inputs.file(windowsPlayerBridgeSource)
+    if (windowsWebView2IncludeDir.exists()) {
+        inputs.dir(windowsWebView2IncludeDir)
+    }
+    if (windowsWebView2LoaderLib.exists()) {
+        inputs.file(windowsWebView2LoaderLib)
+    }
+    outputs.file(windowsPlayerBridgeOutput)
+    outputs.file(windowsPlayerBridgeImportLib)
+    outputs.file(windowsPlayerBridgePdb)
+    commandLine(windowsPlayerBridgeCommand)
+}
+
+val prepareWindowsPlayerRuntime = tasks.register<Sync>("prepareWindowsPlayerRuntime") {
+    enabled = isWindowsHost
+    into(windowsPlayerRuntimeOutput)
+    if (windowsWebView2LoaderDll.exists()) {
+        from(windowsWebView2LoaderDll)
+    }
+    windowsCppRuntimeDlls.forEach { dllFile ->
+        from(dllFile)
+    }
+    when {
+        windowsLibmpvRuntimeDir?.exists() == true -> {
+            from(windowsLibmpvRuntimeDir) {
+                include("*.dll")
+            }
+        }
+        windowsLibmpvDll?.exists() == true -> {
+            from(windowsLibmpvDll)
+        }
+    }
+}
+
+val generateWindowsPlayerRuntimeIndex = tasks.register<GenerateNativeRuntimeIndexTask>("generateWindowsPlayerRuntimeIndex") {
+    enabled = isWindowsHost
+    dependsOn(prepareWindowsPlayerRuntime)
+    runtimeDir.set(windowsPlayerRuntimeOutput)
+    indexFile.set(windowsPlayerRuntimeOutput.map { it.file("runtime-files.txt") })
+}
+
+abstract class GenerateNativeRuntimeIndexTask : DefaultTask() {
+    @get:InputDirectory
+    abstract val runtimeDir: DirectoryProperty
+
+    @get:OutputFile
+    abstract val indexFile: RegularFileProperty
+
+    @TaskAction
+    fun generate() {
+        val dir = runtimeDir.get().asFile
+        val files = dir
+            .listFiles { file -> file.isFile && file.name != indexFile.get().asFile.name }
+            .orEmpty()
+            .map { it.name }
+            .sorted()
+        indexFile.get().asFile.writeText(files.joinToString(separator = "\n", postfix = "\n"))
+    }
+}
+
+tasks.withType<Jar>().configureEach {
+    if (isMacHost && name == "desktopJar") {
+        dependsOn(buildMacosPlayerBridge)
+        from(macosPlayerBridgeOutput) {
+            into("native/macos")
+        }
+    }
+    if (isWindowsHost && name == "desktopJar") {
+        dependsOn(buildWindowsPlayerBridge, prepareWindowsPlayerRuntime, generateWindowsPlayerRuntimeIndex)
+        from(windowsPlayerBridgeOutput) {
+            into("native/windows")
+        }
+        from(windowsPlayerRuntimeOutput) {
+            into("native/windows")
+        }
+    }
+}
+
+if (isWindowsHost) {
+    val desktopNativePlayerTasks = setOf(
+        "run",
+        "runRelease",
+        "desktopRun",
+        "runDistributable",
+        "runReleaseDistributable",
+        "desktopRunHot",
+        "hotRunDesktop",
+        "hotRunDesktopAsync",
+        "hotDevDesktop",
+        "hotDevDesktopAsync",
+        "createDistributable",
+        "createReleaseDistributable",
+        "createRuntimeImage",
+        "package",
+        "packageDistributionForCurrentOS",
+        "packageMsi",
+        "packageUberJarForCurrentOS",
+        "packageReleaseDistributionForCurrentOS",
+        "packageReleaseMsi",
+        "packageReleaseUberJarForCurrentOS",
+    )
+    tasks.matching { it.name in desktopNativePlayerTasks }.configureEach {
+        dependsOn(buildWindowsPlayerBridge, prepareWindowsPlayerRuntime, generateWindowsPlayerRuntimeIndex)
+    }
+}
+
 val generateRuntimeConfigs = tasks.register<GenerateRuntimeConfigsTask>("generateRuntimeConfigs") {
     outputDir.set(generatedRuntimeConfigDir)
     localPropertiesFile.set(rootProject.layout.projectDirectory.file("local.properties"))
     appVersionName.set(releaseAppVersionName)
     appVersionCode.set(releaseAppVersionCode)
+    desktopAppVersionName.set(desktopReleaseVersionName)
+    desktopAppVersionCode.set(desktopReleaseVersionCode)
 }
 
 tasks.withType<KotlinCompilationTask<*>>().configureEach {
@@ -213,6 +783,12 @@ tasks.withType<KotlinCompilationTask<*>>().configureEach {
 
 kotlin {
     androidTarget {
+        compilerOptions {
+            jvmTarget.set(JvmTarget.JVM_11)
+        }
+    }
+
+    jvm("desktop") {
         compilerOptions {
             jvmTarget.set(JvmTarget.JVM_11)
         }
@@ -285,6 +861,16 @@ kotlin {
             implementation(libs.play.services.cast.framework)
             implementation(libs.androidx.mediarouter)
         }
+        val desktopMain by getting {
+            kotlin.srcDir(fullPluginSourceDir)
+            dependencies {
+                implementation(compose.desktop.currentOs)
+                implementation(libs.kotlinx.coroutines.swing)
+                implementation(libs.ktor.client.cio)
+                implementation(libs.quickjs.kt)
+                implementation(libs.ksoup)
+            }
+        }
         commonMain.dependencies {
             implementation(libs.coil.compose)
             implementation(libs.coil.network.ktor3)
@@ -310,6 +896,192 @@ kotlin {
         commonTest.dependencies {
             implementation(libs.kotlin.test)
         }
+    }
+}
+
+compose.desktop {
+    application {
+        mainClass = "com.nuvio.app.MainKt"
+        val smokePlayerUrl = providers.gradleProperty("nuvio.desktop.smokePlayerUrl").orNull
+            ?: System.getenv("NUVIO_DESKTOP_SMOKE_PLAYER_URL")
+        jvmArgs += listOfNotNull(
+            "-Dapple.awt.application.appearance=NSAppearanceNameDarkAqua",
+            "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
+            "--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED",
+            "--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
+            "--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED",
+            smokePlayerUrl?.takeIf { it.isNotBlank() }?.let { "-Dnuvio.desktop.smokePlayerUrl=$it" },
+        )
+
+        nativeDistributions {
+            targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
+            packageName = "Nuvio"
+            packageVersion = desktopReleasePackageVersion
+            vendor = "Nuvio Media"
+            modules(
+                "java.instrument",
+                "java.management",
+                "java.net.http",
+                "jdk.unsupported",
+            )
+            macOS {
+                bundleID = "com.nuvio.media.desktop"
+                iconFile.set(project.file("src/desktopMain/resources/icons/nuvio-app-icon.icns"))
+                if (macosSigningIdentity != null) {
+                    signing {
+                        sign.set(true)
+                        identity.set(macosSigningIdentity)
+                    }
+                }
+                if (
+                    macosNotaryAppleId != null &&
+                    macosNotaryTeamId != null &&
+                    macosNotaryAppSpecificPassword != null
+                ) {
+                    notarization {
+                        appleID.set(macosNotaryAppleId)
+                        teamID.set(macosNotaryTeamId)
+                        password.set(macosNotaryAppSpecificPassword)
+                    }
+                }
+            }
+            windows {
+                iconFile.set(project.file("src/desktopMain/resources/icons/nuvio-app-icon.ico"))
+                shortcut = true
+                menu = true
+                menuGroup = "Nuvio"
+            }
+            linux {
+                iconFile.set(project.file("src/desktopMain/resources/icons/nuvio-app-icon.png"))
+            }
+        }
+
+        buildTypes.release.proguard {
+            isEnabled.set(false)
+        }
+    }
+}
+
+fun renameMacosDmgOutput(release: Boolean) {
+    if (!isMacHost) return
+
+    val distributionName = if (release) "main-release" else "main"
+    val outputDir = layout.buildDirectory.dir("compose/binaries/$distributionName/dmg").get().asFile
+    val finalDmg = outputDir.resolve("Nuvio-macOS-$macosDmgArchName-$desktopReleaseVersionName.dmg")
+    val defaultDmg = outputDir.resolve("Nuvio-$desktopReleasePackageVersion.dmg")
+    val sourceDmg = defaultDmg.takeIf { it.exists() }
+        ?: finalDmg.takeIf { it.exists() }
+        ?: error("Expected macOS DMG output in ${outputDir.absolutePath}")
+
+    if (sourceDmg != finalDmg) {
+        if (finalDmg.exists() && !finalDmg.delete()) {
+            error("Could not replace existing DMG: ${finalDmg.absolutePath}")
+        }
+        if (!sourceDmg.renameTo(finalDmg)) {
+            sourceDmg.copyTo(finalDmg, overwrite = true)
+            if (!sourceDmg.delete()) {
+                logger.warn("Could not delete old DMG after copy: ${sourceDmg.absolutePath}")
+            }
+        }
+    }
+
+    logger.lifecycle("macOS DMG artifact: ${finalDmg.absolutePath}")
+    publishMacosDmgArtifact(finalDmg)
+}
+
+fun publishMacosDmgArtifact(dmg: File) {
+    val publishedDir = layout.buildDirectory.dir("compose/release-dmgs").get().asFile
+    publishedDir.mkdirs()
+    val publishedDmg = publishedDir.resolve(dmg.name)
+    if (dmg.canonicalFile != publishedDmg.canonicalFile) {
+        dmg.copyTo(publishedDmg, overwrite = true)
+    }
+    logger.lifecycle("Published macOS DMG artifact: ${publishedDmg.absolutePath}")
+}
+
+fun publishWindowsMsiOutput(release: Boolean) {
+    if (!isWindowsHost) return
+
+    val distributionName = if (release) "main-release" else "main"
+    val outputDir = layout.buildDirectory.dir("compose/binaries/$distributionName/msi").get().asFile
+    val finalMsi = outputDir.resolve("Nuvio-Windows-$windowsPlayerBridgeArch-$desktopReleaseVersionName.msi")
+    val defaultMsi = outputDir.resolve("Nuvio-$desktopReleasePackageVersion.msi")
+    val sourceMsi = defaultMsi.takeIf { it.exists() }
+        ?: finalMsi.takeIf { it.exists() }
+        ?: error("Expected Windows MSI output in ${outputDir.absolutePath}")
+
+    if (sourceMsi.canonicalFile != finalMsi.canonicalFile) {
+        sourceMsi.copyTo(finalMsi, overwrite = true)
+    }
+
+    logger.lifecycle("Windows MSI artifact: ${finalMsi.absolutePath}")
+    publishWindowsMsiArtifact(finalMsi)
+}
+
+fun publishWindowsMsiArtifact(msi: File) {
+    val publishedDir = layout.buildDirectory.dir("compose/release-msis").get().asFile
+    publishedDir.mkdirs()
+    val publishedMsi = publishedDir.resolve(msi.name)
+    if (msi.canonicalFile != publishedMsi.canonicalFile) {
+        msi.copyTo(publishedMsi, overwrite = true)
+    }
+    logger.lifecycle("Published Windows MSI artifact: ${publishedMsi.absolutePath}")
+}
+
+tasks.matching { it.name == "packageDmg" }.configureEach {
+    doLast {
+        if (!isMacosDmgNotarizationRequested) {
+            renameMacosDmgOutput(release = false)
+        }
+    }
+}
+
+tasks.matching { it.name == "packageReleaseDmg" }.configureEach {
+    doLast {
+        if (!isMacosDmgNotarizationRequested) {
+            renameMacosDmgOutput(release = true)
+        }
+    }
+}
+
+tasks.matching { it.name == "notarizeDmg" }.configureEach {
+    notCompatibleWithConfigurationCache("Compose Desktop notarization settings are not configuration-cache safe.")
+    doLast {
+        renameMacosDmgOutput(release = false)
+    }
+}
+
+tasks.matching { it.name == "notarizeReleaseDmg" }.configureEach {
+    notCompatibleWithConfigurationCache("Compose Desktop notarization settings are not configuration-cache safe.")
+    doLast {
+        renameMacosDmgOutput(release = true)
+    }
+}
+
+tasks.matching { it.name == "packageMsi" }.configureEach {
+    notCompatibleWithConfigurationCache("Windows MSI artifact publication uses script file operations.")
+    doLast {
+        publishWindowsMsiOutput(release = false)
+    }
+}
+
+tasks.matching { it.name == "packageReleaseMsi" }.configureEach {
+    notCompatibleWithConfigurationCache("Windows MSI artifact publication uses script file operations.")
+    doLast {
+        publishWindowsMsiOutput(release = true)
+    }
+}
+
+if (isMacHost) {
+    tasks.register<NotarizeMacosDmgWithKeychainTask>("notarizeReleaseDmgWithKeychain") {
+        group = "distribution"
+        description = "Packages, notarizes, and staples the release macOS DMG using a notarytool keychain profile."
+        dependsOn("packageReleaseDmg")
+        dmgDir.set(layout.buildDirectory.dir("compose/binaries/main-release/dmg"))
+        artifactDir.set(layout.buildDirectory.dir("compose/release-dmgs"))
+        finalDmgName.set("Nuvio-macOS-$macosDmgArchName-$desktopReleaseVersionName.dmg")
+        defaultDmgName.set("Nuvio-$desktopReleasePackageVersion.dmg")
+        keychainProfile.set(macosNotaryKeychainProfile.orEmpty())
     }
 }
 
